--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -30,5 +30,4 @@
 .section-stories {
   position: relative;
   padding: 8rem 0;
-  margin-top: 10rem;
 }
